...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_icon_turtle_color_no_circle"
        android:contentDescription="@string/a_turtle" />

    <Button
        android:id="@+id/button_get_started"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_shape"
        android:text="@string/get_started"
...
